--- a/data/constructions/nom-n-mod-001.yaml
+++ b/data/constructions/nom-n-mod-001.yaml
@@ -1,21 +1,95 @@
 id: nom-n-mod-001
-pattern: "NP[Nom[Mod:N Head:N]]"
+pattern: "Nom[Mod:Nom Head:N]"
 name: "Nominal Pre-head Modifier in Nominal"
-coreMeaning: "Type/purpose/origin specification of head nominal"
-examples:
-  - form: "army men"
-    meaning: "Men belonging to/serving in army"
-    notes: "Shows institutional affiliation"
-  - form: "kitchen table"
-    meaning: "Table used in/designed for kitchen"
-    notes: "Shows purpose/location relation"
+meanings:
+  - meaning: "The first nominal specifies the type or category of the second nominal."
+    examples:
+      - form: "[[dog] breeder]"
+        notes: "Specifies the type of breeder: one who breeds dogs."
+      - form: "[[toy] factory]"
+        notes: "Specifies the type of factory: one that makes toys."
+    constraints:
+      - type: "semantic"
+        description: "The first nominal denotes a type or category that the second nominal belongs to."
+    relatedConstructions:
+      - id: "n-common-001"
+        relationship: "can-fill-left"
+      - id: "n-common-001"
+        relationship: "can-fill-right"
+  - meaning: "The first nominal indicates the purpose or function of the second nominal."
+    examples:
+      - form: "[[coffee] cup]"
+        notes: "A cup intended for holding coffee."
+      - form: "[[work] clothes]"
+        notes: "Clothes worn for work."
+    constraints:
+      - type: "semantic"
+        description: "The first nominal denotes a purpose or function associated with the second nominal."
+    relatedConstructions:
+      - id: "n-common-001"
+        relationship: "can-fill-left"
+      - id: "n-common-001"
+        relationship: "can-fill-right"
+  - meaning: "The first nominal specifies the origin or location of the second nominal."
+    examples:
+      - form: "[[city] council]"
+        notes: "Indicates the council is associated with a particular city."
+      - form: "[[country] music]"
+        notes: "Music originating from or associated with a particular country."
+    constraints:
+      - type: "semantic"
+        description: "The first nominal denotes a location or origin associated with the second nominal."
+    relatedConstructions:
+      - id: "n-common-001"
+        relationship: "can-fill-left"
+      - id: "n-common-001"
+        relationship: "can-fill-right"
+  - meaning: "The first nominal describes a defining characteristic of the second nominal"
+    examples:
+      - form: "the [[me] generation]"
+        notes: "The first nominal describes a defining characteristic of the second nominal"
+      - form: "[[man] hours]"
+        notes: "The first nominal describes a defining characteristic of the second nominal"
+    constraints:
+      - type: "semantic"
+        description: "The first nominal denotes a defining characteristic of the second nominal"
+    relatedConstructions:
+      - id: "np-commonized-pron-001"
+        relationship: "can-fill"
+      - id: "n-common-001"
+        relationship: "can-fill-left"
+      - id: "n-common-001"
+        relationship: "can-fill-right"
+  - meaning: "The first nominal has a relationship with the second nominal that is similar to that expressed by a genitive construction, indicating a relationship such as possession, association, or inalienable part."
+    examples:
+      - form: "[[student] representative]"
+        notes: "Equivalent to 'representative of the students'."
+      - form: "[[government] land]"
+        notes: "Could be paraphrased as 'the government's land'."
+      - form: "[[baby] food]"
+        notes: "Meaning 'food for babies'."
+    constraints:
+      - type: "semantic"
+        description: "The relationship between the two nominals can often be paraphrased using a genitive construction (e.g., using 'of' or ''s')."
+    relatedConstructions:
+      - id: "np-gen-dep-001"
+        relationship: "semantically-related-to"
+      - id: "np-gen-indep-001"
+        relationship: "semantically-related-to"
+      - id: "n-common-001"
+        relationship: "can-fill-left"
+      - id: "n-common-001"
+        relationship: "can-fill-right"
 constraints:
   - type: "structural"
-    description: "Mod must be bare N"
-  - type: "position"
-    description: "N occurs in pre-head position in Nom"
-semanticType: "classification"
+    description: "A nominal functions as a pre-head modifier within a larger noun phrase."
+  - type: "syntactic"
+    description: "The first nominal modifies the second nominal (which is the head of the larger NP). The head of the modifying nominal is a Noun."
+  - type: "semantic"
+    description: "The modifying nominal typically restricts or specifies the meaning of the head nominal."
+semanticType: "modification"
 relatedConstructions:
-  - id: "nom-premod-000"
-    relationship: "inherits-from"
-    notes: "Specific type of pre-head modification"
+  - id: "nom-001"
+    relationship: "can-fill"
+  - id: "np-001"
+    relationship: "can-be-part-of"
