--- a/data/constructions/np-det-001.yaml
+++ b/data/constructions/np-det-001.yaml
@@ -1,20 +1,15 @@
 id: np-det-001
-pattern: "NP[Det Head:Nom]"
+pattern: "NP[Det Nom]"
 name: "Determined Noun Phrase"
-coreMeaning: "Specific/definite reference, quantification, etc. depending on Det"
-examples:
-  - form: "the dog"
-    meaning: "Reference to specific dog"
-  - form: "all dogs"
-    meaning: "Quantification over all dogs"
-  - form: "this coffee"
-    meaning: "Reference to specific/proximal coffee"
-  - form: "those men"
-    meaning: "Reference to contextually salient group"
-constraints:
-  - type: "structural"
-    description: "Must have Det"
-semanticType: "reference"
-relatedConstructions:
-  - id: "np-bare-001"
-    relationship: "contrasts-with"
+meanings:
+  - meaning: "Referential, typically with specific or contextually identifiable referent"
+    examples:
+      - form: "the dog"
+        notes: "Could refer to a specific dog previously mentioned or identifiable from context."
+      - form: "those books"
+        notes: "Refers to specific books that are likely identifiable by the listener."
+    relatedConstructions:
+      - id: "np-def-001"
+        relationship: "inherits-from"
+      - id: "np-indef-001"
+        relationship: "inherits-from"
