Update and rename np-proper-name-001.yaml to name-proper-001.yaml

--- a/data/constructions/name-proper-001.yaml
+++ b/data/constructions/name-proper-001.yaml
@@ -1,4 +1,4 @@
-id: np-proper-name-001
+id: proper-name-001
 name: "Proper Name"
 pattern: "Any linguistic form that functions to uniquely identify"
 meanings:
