--- a/data/constructions/np-bare-001.yaml
+++ b/data/constructions/np-bare-001.yaml
@@ -1,58 +1,95 @@
-id: np-bare-001
-pattern: "NP[Nom[Head:N]]"
-name: "Bare Noun Phrase"
+id: NP-bare-001
+name: "Bare NP Construction"
+pattern: "NP[Head:Nom]"
 meanings:
-  - meaning: "Generic/kind reference"
-    examples:
-      - form: "dogs bark"
-        notes: "Statement about dogs as a kind, not specific dogs"
-      - form: "coffee is a stimulant"
-        notes: "General statement about coffee as a substance"
-    notes: |
-      Bare plurals and mass nouns can also contribute to habitual or dispositional
-      readings when combined with verbs that express habitual actions (e.g., 'drinks',
-      'eats', 'smokes') and when the overall context supports such an interpretation.
-      For example, 'John drinks beer' can be interpreted as a statement about John's
-      habitual behavior. However, this habitual meaning is not solely due to the bare
-      NP construction but arises from the interaction of the bare NP with the verb
-      and the context.
-  - meaning: "Indefinite reference (often with plural or mass nouns)"
-    examples:
-      - form: "I saw dogs in the park."
-        notes: "Refers to some unspecified dogs, not a definite group"
-      - form: "There's coffee on the table."
-        notes: "Refers to an unspecified amount of coffee"
-  - meaning: "Incorporated/Institutionalized"
-    examples:
-      - form: "go to school"
-        notes: "Refers to the institution of education, not a specific school building"
-      - form: "be in hospital"
-        notes: "Refers to being admitted as a patient, not a specific hospital location"
-      - form: "go to town"
-        notes: "Means to do something with great effort or enthusiasm"
-      - form: "be at home"
-        notes: "Refers to being in one's place of residence"
-    notes: |
-      These are often fixed expressions with specialized meanings, particularly common
-      with singular bare NPs in specific contexts (e.g., 'go to', 'be in/at'). They
-      often refer to an institution or a general activity rather than a specific
-      physical place.
-  - meaning: "Abstract/Figurative"
-    examples:
-      - form: "Love conquers all."
-        notes: "Abstract concept used in a proverb"
-      - form: "Time is money."
-        notes: "Figurative use of 'time' and 'money'"
-    notes: |
-      Bare NPs can be used in abstract or figurative expressions, often in proverbs,
-      sayings, or literary language. The specific interpretation often depends heavily
-      on the idiom or the broader context.
-constraints:
-  - type: "structural"
-    description: "No determiner"
-  - type: "syntactic"
-    description: "Nom has no Mod"
-semanticType: "reference"
-relatedConstructions:
-  - id: "np-common-001"
-    relationship: "inherits-from"
+ 1:
+   definition: "Refers to/predicates mass substance"
+   details: "Refers to or predicates uncountable substance/material"
+   examples:
+     - form: "Water is essential"
+       note: "Mass substance reference"
+     - form: "That is gold"
+       note: "Mass substance predication"
+   relations: [1, 2]
+ 2:
+   definition: "Refers to/predicates kind"
+   details: "Refers to or predicates type/category through plural form"
+   examples:
+     - form: "Dogs are loyal"
+       note: "Kind reference"
+     - form: "Those are bears"
+       note: "Kind predication"
+   relations: [2, 3]
+ 3:
+   definition: "Refers to/predicates role"
+   details: "Predicates institutional/professional role status"
+   examples:
+     - form: "is president"
+       note: "Role predication"
+     - form: "became chair"
+       note: "Role assumption"
+   relations: [3, 4]
+ 4:
+   definition: "Refers to individual"
+   details: "Refers to uniquely identifiable individual through proper name"
+   examples:
+     - form: "John arrived"
+       note: "Individual reference"
+     - form: "That is Mary"
+       note: "Individual identification"
+   relations: [1, 4]
+ 5:
+   definition: "Refers to/predicates activity"
+   details: "Refers to or predicates generic activity type"
+   examples:
+     - form: "Playing piano takes practice"
+       note: "Activity reference"
+     - form: "That is swimming"
+       note: "Activity identification"
+   relations: [2, 5]
+ 6:
+   definition: "Refers to/predicates time"
+   details: "Refers to or predicates temporal point/period"
+   examples:
+     - form: "Monday works"
+       note: "Time reference"
+     - form: "That is noon"
+       note: "Time identification"
+   relations: [4, 6]
+ 7:
+   definition: "Refers to/predicates place" 
+   details: "Refers to or predicates location/space"
+   examples:
+     - form: "Home is where..."
+       note: "Place reference"
+     - form: "This is downtown"
+       note: "Place identification"
+   relations: [4, 6]
+ 8:
+   definition: "Refers to/predicates abstract concept"
+   details: "Refers to or predicates abstract notion/quality"
+   examples:
+     - form: "Freedom isn't free"
+       note: "Abstract reference"
+     - form: "That is justice"
+       note: "Abstract identification"
+   relations: [2, 5]
+relations:
+ 1:
+   construction: "NP-indefinite-001"
+   type: "implements"
+ 2:
+   construction: "mass-001"
+   type: "enables"
+ 3:
+   construction: "kind-001"
+   type: "enables"
+ 4:
+   construction: "proper-name-001"
+   type: "enables"
+ 5:
+   construction: "abstract-001"
+   type: "enables"
+ 6:
+   construction: "deictic-001"
+   type: "enables"
